# FIB-data-cleaner

./: FIB_data_cleaner.py  README.md  pyproject.toml  requirements.txt
src/FIBDataCleaner/: fdc.py
src/FIBDataCleaner/ui/: Console.py  MainWindow.py  MainWindow.ui
ui/: Console.py  CustomComponents.py  MainWindow.py  MainWindow.ui
